<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Adventech <info@adventech.io>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.cryart.sabbathschool.viewmodel.SSAboutViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/ss_app_bar"
            layout="@layout/ss_app_bar" />

        <ImageView
            android:id="@+id/ss_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ss_about_app_logo_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ss_about_app_logo_size"
            app:srcCompat="@drawable/ss_logo_color" />

        <TextView
            android:id="@+id/ss_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/ss_about_app_name_margin_top"
            android:text="@string/ss_app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/ss_about_app_name_text_size"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="@dimen/ss_about_app_version_margin_bottom"
            android:layout_marginTop="@dimen/ss_about_app_version_margin_top"
            android:text="@string/ss_about_app_version"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/ss_horizontal_line" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{() -> viewModel.onWebsiteClick()}"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_settings_website"
                            android:textColor="@color/colorSecondaryDark"
                            android:textSize="@dimen/ss_about_list_title_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_settings_website_summary"
                            android:textColor="@color/colorSecondary"
                            android:textSize="@dimen/ss_about_list_link_text_size" />

                    </LinearLayout>
                </FrameLayout>

                <include layout="@layout/ss_horizontal_line" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{() -> viewModel.onFacebookClick()}"
                    android:paddingBottom="@dimen/ss_about_list_padding"
                    android:paddingTop="@dimen/ss_about_list_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_facebook"
                            android:textColor="@color/colorSecondaryDark"
                            android:textSize="@dimen/ss_about_list_title_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_facebook_summary"
                            android:textColor="@color/colorSecondary"
                            android:textSize="@dimen/ss_about_list_link_text_size" />

                    </LinearLayout>
                </FrameLayout>

                <include layout="@layout/ss_horizontal_line" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{() -> viewModel.onInstagramClick()}"
                    android:paddingBottom="@dimen/ss_about_list_padding"
                    android:paddingTop="@dimen/ss_about_list_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_instagram"
                            android:textColor="@color/colorSecondaryDark"
                            android:textSize="@dimen/ss_about_list_title_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_instagram_summary"
                            android:textColor="@color/colorSecondary"
                            android:textSize="@dimen/ss_about_list_link_text_size" />
                    </LinearLayout>
                </FrameLayout>

                <include layout="@layout/ss_horizontal_line" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{() -> viewModel.onGitHubClick()}"
                    android:paddingBottom="@dimen/ss_about_list_padding"
                    android:paddingTop="@dimen/ss_about_list_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_github"
                            android:textColor="@color/colorSecondaryDark"
                            android:textSize="@dimen/ss_about_list_title_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ss_about_github_summary"
                            android:textColor="@color/colorSecondary"
                            android:textSize="@dimen/ss_about_list_link_text_size" />

                    </LinearLayout>
                </FrameLayout>

                <include layout="@layout/ss_horizontal_line" />

                <TextView
                    fontPath="Lato-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="@dimen/ss_about_made_margin_bottom"
                    android:layout_marginTop="@dimen/ss_about_made_margin_top"
                    android:gravity="bottom"
                    android:paddingTop="@dimen/ss_about_list_padding"
                    android:text="@string/ss_about_made"
                    android:textColor="@color/colorSecondaryDark" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>